--- a/date-a-scientist_v2.ipynb
+++ b/date-a-scientist_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 30,
    "id": "ff5719c4-3769-4b36-b061-15204251ad1f",
    "metadata": {
     "scrolled": true
@@ -51,35 +51,29 @@
       "dtypes: float64(1), int64(2), object(28)\n",
       "memory usage: 14.2+ MB\n",
       "None\n",
-      "pets\n",
-      "unknown                            0.332292\n",
-      "likes dogs and likes cats          0.247132\n",
-      "likes dogs                         0.120577\n",
-      "likes dogs and has cats            0.071952\n",
-      "has dogs                           0.068980\n",
-      "has dogs and likes cats            0.038873\n",
-      "likes dogs and dislikes cats       0.033880\n",
-      "has dogs and has cats              0.024596\n",
-      "has cats                           0.023444\n",
-      "likes cats                         0.017733\n",
-      "has dogs and dislikes cats         0.009184\n",
-      "dislikes dogs and likes cats       0.003974\n",
-      "dislikes dogs and dislikes cats    0.003256\n",
-      "dislikes cats                      0.002037\n",
-      "dislikes dogs and has cats         0.001353\n",
-      "dislikes dogs                      0.000735\n",
+      "smokes\n",
+      "no         0.732480\n",
+      "yes        0.175698\n",
+      "unknown    0.091823\n",
       "Name: proportion, dtype: float64\n",
-      "likes_dogs\n",
-      "yes    0.624493\n",
-      "no     0.375507\n",
+      "language_count\n",
+      "1    0.485765\n",
+      "2    0.287508\n",
+      "3    0.144839\n",
+      "4    0.054219\n",
+      "5    0.027669\n",
       "Name: proportion, dtype: float64\n",
-      "likes_dogs\n",
-      "yes    0.624493\n",
-      "no     0.375507\n",
+      "status\n",
+      "single            0.929117\n",
+      "seeing someone    0.034432\n",
+      "available         0.031109\n",
+      "married           0.005176\n",
+      "unknown           0.000167\n",
       "Name: proportion, dtype: float64\n",
-      "likes_cats\n",
-      "no     0.522584\n",
-      "yes    0.477416\n",
+      "status\n",
+      "available      0.960225\n",
+      "unavailable    0.039608\n",
+      "unknown        0.000167\n",
       "Name: proportion, dtype: float64\n"
      ]
     }
@@ -325,45 +319,139 @@
     "\n",
     "#pets\n",
     "df['pets'] = df['pets'].fillna('unknown')\n",
-    "print(df['pets'].value_counts(normalize=True))\n",
     "\n",
     "def likes_dogs(pets):\n",
-    "    if pd.isna(pets):\n",
-    "        return 'unknown'\n",
-    "    pets = pets.lower()\n",
-    "    if 'likes dogs' in pets or 'has dogs' in pets:\n",
-    "        return 'yes'\n",
-    "    else:\n",
-    "        return 'no'\n",
+    "    if isinstance(pets, str):\n",
+    "        pets = pets.lower().strip()\n",
+    "        if 'likes dogs' in pets or 'has dogs' in pets:\n",
+    "            return 'yes'\n",
+    "    return 'no'\n",
     "\n",
-    "df['likes_dogs'] = df['pets'].apply(likes_dogs)\n",
-    "\n",
-    "print(df['likes_dogs'].value_counts(normalize=True))\n",
-    "    \n",
     "def likes_cats(pets):\n",
-    "    if pd.isna(pets):\n",
-    "        return 'unknown'\n",
-    "    pets = pets.lower()\n",
-    "    if 'likes cats' in pets or 'has cats' in pets:\n",
-    "        return 'yes'\n",
-    "    else:\n",
-    "        return 'no'\n",
+    "    if isinstance(pets, str):\n",
+    "        pets = pets.lower().strip()\n",
+    "        if 'likes cats' in pets or 'has cats' in pets:\n",
+    "            return 'yes'\n",
+    "    return 'no'\n",
+    "        \n",
     "\n",
     "df['likes_dogs'] = df['pets'].apply(likes_dogs)\n",
     "df['likes_cats'] = df['pets'].apply(likes_cats)\n",
     "\n",
-    "print(df['likes_dogs'].value_counts(normalize=True))\n",
-    "print(df['likes_cats'].value_counts(normalize=True))\n",
+    "#religion\n",
+    "df['religion'] = df['religion'].fillna('unknown')\n",
     "\n",
-    "#RETHINK THIS -> "
+    "def get_religion(r):\n",
+    "    try:\n",
+    "        religion = r.split(' ')[0]\n",
+    "    except:\n",
+    "        print(r)\n",
+    "        return\n",
+    "    if religion == 'buddhism' or religion == 'hinduism' or religion == 'islam':\n",
+    "        return 'other'\n",
+    "    else:\n",
+    "        return religion\n",
+    "\n",
+    "religion_importance_conditions = [\n",
+    "    df['religion'].str.contains('not too serious|laughing', case=False, na=False),\n",
+    "    df['religion'].str.contains('somewhat serious|very serious', case=False, na=False),\n",
+    "    df['religion'].str.contains('unknown', case=False, na=False)\n",
+    "]\n",
+    "\n",
+    "religion_importance_options = ['no', 'yes', 'unknown']\n",
+    "\n",
+    "df['religion_importance'] = np.select(religion_importance_conditions, religion_importance_options, default = 'unknown')\n",
+    "df['religion'] = df['religion'].apply(get_religion)   \n",
+    "\n",
+    "#sex - good to go\n",
+    "#print(df['sex'].value_counts(normalize=True, dropna=False))\n",
+    "\n",
+    "#sign\n",
+    "df['sign'] = df['sign'].fillna('unknown')\n",
+    "df['sign'] = df['sign'].str.replace('&rsquo;', '\\'', regex=False)\n",
+    "\n",
+    "def get_sign(sign):\n",
+    "    if isinstance(sign, str):\n",
+    "        return sign.split(' ')[0]\n",
+    "    else:\n",
+    "        return 'unknown'\n",
+    "\n",
+    "sign_importance_conditions = [\n",
+    "    df['sign'].str.contains('fun', regex = False),\n",
+    "    df['sign'].str.contains('but it doesn\\'t matter', regex = False),\n",
+    "    df['sign'].str.contains('and it matters a lot', regex = False)\n",
+    "]\n",
+    "\n",
+    "sign_importance_options = ['fun', 'not important', 'important']\n",
+    "\n",
+    "df['sign_importance'] = np.select(sign_importance_conditions, sign_importance_options, default = 'unknown')\n",
+    "df['sign'] = df['sign'].apply(get_sign)\n",
+    "\n",
+    "#print(df['sign'].value_counts(normalize=True, dropna=False)) # 12 categories + unknown -> not sure if it will have predictive power. Might drop it\n",
+    "#print(df['sign_importance'].value_counts(normalize=True, dropna=False))  # only 1% considers important, might drop it\n",
+    "\n",
+    "df.drop(['sign', 'sign_importance'], axis = 1)\n",
+    "\n",
+    "#smokes\n",
+    "df['smokes'] = df['smokes'].fillna('unknown')\n",
+    "\n",
+    "smokes_map = {\n",
+    "    'no': 'no',\n",
+    "    'unknown': 'unknown',\n",
+    "    'sometimes': 'yes',\n",
+    "    'when drinking': 'yes',\n",
+    "    'trying to quit': 'yes',\n",
+    "    'yes': 'yes'\n",
+    "}\n",
+    "\n",
+    "df['smokes'] = df['smokes'].map(smokes_map)\n",
+    "\n",
+    "print(df['smokes'].value_counts(normalize=True, dropna=False))\n",
+    "\n",
+    "#speaks - has a list of comma separated values with proficiency between brackets\n",
+    "# will get the top 5 languages and save the proficiency level for each + add a column for languages count\n",
+    "df['speaks'] = df['speaks'].fillna('unknown')\n",
+    "\n",
+    "def get_languages_count(l):\n",
+    "    count_commas = l.count(',')\n",
+    "    return (count_commas + 1)\n",
+    "\n",
+    "df['language_count'] = df['speaks'].apply(get_languages_count)\n",
+    "print(df['language_count'].value_counts(normalize=True, dropna=False))\n",
+    "\n",
+    "#TO DO -> get the 5 top languages and create columns with the level\n",
+    "\n",
+    "#status\n",
+    "df['status'] = df['status'].fillna('unknown')\n",
+    "print(df['status'].value_counts(normalize=True, dropna=False))\n",
+    "\n",
+    "status_map = {\n",
+    "    'single': 'available',\n",
+    "    'seeing someone': 'unavailable',\n",
+    "    'available': 'available',\n",
+    "    'married': 'unavailable',\n",
+    "    'unknown': 'unknown'\n",
+    "}\n",
+    "\n",
+    "df['status'] = df['status'].map(status_map)\n",
+    "\n",
+    "print(df['status'].value_counts(normalize=True, dropna=False))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2964e929-32b0-461b-beb8-dbdb4066f770",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -375,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
