--- a/date-a-scientist_v2.ipynb
+++ b/date-a-scientist_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "id": "ff5719c4-3769-4b36-b061-15204251ad1f",
    "metadata": {
     "scrolled": true
@@ -63,18 +63,7 @@
       "4    0.054219\n",
       "5    0.027669\n",
       "Name: proportion, dtype: float64\n",
-      "status\n",
-      "single            0.929117\n",
-      "seeing someone    0.034432\n",
-      "available         0.031109\n",
-      "married           0.005176\n",
-      "unknown           0.000167\n",
-      "Name: proportion, dtype: float64\n",
-      "status\n",
-      "available      0.960225\n",
-      "unavailable    0.039608\n",
-      "unknown        0.000167\n",
-      "Name: proportion, dtype: float64\n"
+      "['english', 'spanish', 'french', 'chinese', 'german']\n"
      ]
     }
    ],
@@ -421,9 +410,28 @@
     "\n",
     "#TO DO -> get the 5 top languages and create columns with the level\n",
     "\n",
+    "language_counts = {}\n",
+    "def get_top_languages(lang):\n",
+    "    languages = lang.split(',')\n",
+    "    for language in languages:\n",
+    "        l = language.strip().split(' ')[0]\n",
+    "        if l in language_counts:\n",
+    "            language_counts[l] += 1\n",
+    "        else:\n",
+    "            language_counts[l] = 1\n",
+    "\n",
+    "df['speaks'].apply(get_top_languages)\n",
+    "top_5_languages = sorted(language_counts, key=language_counts.get, reverse=True)[:5]\n",
+    "print(top_5_languages)\n",
+    "\n",
+    "for lang in top_5_languages:\n",
+    "    df[f'{lang}_level'] = 'none'\n",
+    "\n",
+    "#to be continued -> set the level for each record\n",
+    "\n",
     "#status\n",
     "df['status'] = df['status'].fillna('unknown')\n",
-    "print(df['status'].value_counts(normalize=True, dropna=False))\n",
+    "#print(df['status'].value_counts(normalize=True, dropna=False))\n",
     "\n",
     "status_map = {\n",
     "    'single': 'available',\n",
@@ -435,7 +443,9 @@
     "\n",
     "df['status'] = df['status'].map(status_map)\n",
     "\n",
-    "print(df['status'].value_counts(normalize=True, dropna=False))\n"
+    "#print(df['status'].value_counts(normalize=True, dropna=False))\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -449,9 +459,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -463,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
